<resources>
    <string name="app_name">Football Portal Apps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prev_event">Prev Event</string>
    <string name="next_event">Next Event</string>
    <string name="favoriteEvent">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="sun_12_feb_2017">Sun, 12 Feb 2017</string>
    <string name="_2_vs_1">2 vs 1</string>
    <string name="manchester_united">Manchester United</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="search">Search</string>
    <string name="_21_00">21:00</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_m">Height (m)</string>
</resources>
