<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <ImageView
            android:id="@+id/event_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/baseline_calendar_today_black_24"
            android:visibility="gone" />

        <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
            android:id="@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/sun_12_feb_2017" />

        <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
            android:id="@+id/event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_date"
            android:gravity="center"
            android:padding="2dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp"
            tools:text="@string/_21_00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_time"
            android:orientation="horizontal">

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/home_team_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_date"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                tools:text="@string/manchester_united" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/league_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/_2_vs_1" />


            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/away_team_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                tools:text="@string/manchester_united" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>
