<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.abdulaziz.submissionfinal.eventleaguedetail.EventLeagueDetailActivity">

    <LinearLayout
        android:id="@+id/detail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
            android:id="@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/sun_12_feb_2017"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
            android:id="@+id/event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/_21_00"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_home_badge_team"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="2dp"
                    app:srcCompat="@drawable/placeholder" />

                <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                    android:id="@+id/home_team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/manchester_united"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/league_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="2  vs  1"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_away_badge_team"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="2dp"
                    app:srcCompat="@drawable/placeholder" />

                <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                    android:id="@+id/away_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/manchester_united"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_grey_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/home_goals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/goals"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/away_goals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/home_shot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/shots"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/away_shot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_grey_400" />

        <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lineups"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/home_goal_keeper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/goal_keeper"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/away_goal_keeper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/home_defense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/defense"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/away_defense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/home_midfield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/midfield"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/away_midfield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/home_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/forward"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/away_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/home_substitutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/substitutes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                android:id="@+id/away_substitutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
